--- a/eduction.html
+++ b/eduction.html
@@ -16,14 +16,14 @@
     <!-- navigator bar -->
     <nav id="navigator" class="navbar navbar-expand-sm navbar-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html"><img src="images/n.png" height="30px" width="30px"></a>
+            <a class="navbar-brand" href="./index.html"><img src="./images/n.png" height="30px" width="30px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class= "collapse navbar-collapse" id="navbarResponsive">
                 <ul id="navigatorlist" class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item active">
-                        <a class = "nav-link" href="/index.html">Home</a>
+                        <a class = "nav-link" href="./index.html">Home</a>
                     </li>
                     
                 </ul>
@@ -33,7 +33,7 @@
    <div class="container-fluid row padding " ">
        <h1 class="display-1" style="margin-bottom: 40px">Education</h1>
        <div class="container col-md-6 col-xl-4 ">
-        <image class="rounded" src="/images/campus.jpg" style= "width: 100%"></image>
+        <image class="rounded" src="./images/campus.jpg" style= "width: 100%"></image>
 
        </div>
        <div class="container col-md-6 col-xl-8">
@@ -45,7 +45,7 @@
    </div>
    <div class="container-fluid row" style="margin-top: 50px; margin-bottom: 150px;">
     <div class="container col-md-6 col-xl-4 text-center" >
-        <image class="rounded" src="/images/school-logo.png" style="width: 100%; height: 250px;" ></image>
+        <image class="rounded" src="./images/school-logo.png" style="width: 100%; height: 250px;" ></image>
 
        </div>
        <div class="container col-md-6 col-xl-8 padding" style="margin-bottom: 50px;">
