--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- navigator bar -->
     <nav id="navigator" class="navbar navbar-expand-sm navbar-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="images/n.png" height="30px" width="30px"></a>
+            <a class="navbar-brand" href="#"><img src=".images/n.png" height="30px" width="30px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,7 +42,7 @@
     <!-- name card -->
     <div class="container-fluid row">
       <div id="profilecard" class="card col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 crotating-card-container manualtrigger manual-flip"" >
-        <img id="profile-image" class="card-img-top" src="/images/profilepic.png" alt="Card image">
+        <img id="profile-image" class="card-img-top" src="./images/profilepic.png" alt="Card image">
         <div class="card-body">
           <h1 class="card-title">Naman Aggarwal</h1>
           <p class="card-text">Student | Web Developer</p>
@@ -68,28 +68,28 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carouselitem carousel-item active">
-          <img src="/images/html-5.png" class="d-block w-auto carouselimage" alt="...">
+          <img src="./images/html-5.png" class="d-block w-auto carouselimage" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>HTML</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit neque assumenda perferendis.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/css.png" class="d-block w-auto carouselimage" alt="...">
+          <img src="./images/css.png" class="d-block w-auto carouselimage" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>css</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit neque assumenda perferendis.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/c-logo.png" class="d-block w-auto carouselimage" alt="...">
+          <img src="./images/c-logo.png" class="d-block w-auto carouselimage" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>C++</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit neque assumenda perferendis.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/flutter.png" class="d-block w-auto carouselimage" alt="...">
+          <img src="./images/flutter.png" class="d-block w-auto carouselimage" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Flutter App Development</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit neque assumenda perferendis.</p>
@@ -131,17 +131,17 @@
         <div class = "container-fluid padding" >
           <div class = "row text-center padding">
               <div class = "col-xs-12 col-sm-6 col-md-4">
-                <img class = "iconimage" src="/images/html-5.png">
+                <img class = "iconimage" src="./images/html-5.png">
                 <h3>HTML</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sequi est ipsam molestiae perferendis. Voluptas nulla sed eius ullam? Nobis atque corporis ut tempora. Illum error iusto facere maiores laboriosam. Lorem ipsum, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, necessitatibus! Amet ipsam id, repellat voluptates iste expedita. Voluptatibus magnam quibusdam ducimus soluta,</p>
               </div> 
               <div class =  "col-xs-12 col-sm-6 col-md-4">
-                <img class = "iconimage" src="/images/css.png">
+                <img class = "iconimage" src="./images/css.png">
                 
                 <h3>CSS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sunt quam distinctio ut. Laudantium natus nisi commodi perspiciatis illum numquam, ipsum saepe unde placeat atque perferendis earum rerum dolorem nihil. Lorem ipsum, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, necessitatibus! Amet ipsam id, repellat voluptates iste expedita. Voluptatibus magnam quibusdam ducimus soluta,</p>
               </div> <div class = "col-xs-12 col-sm-6 col-md-4">
-                <img class = "iconimage" src="/images/icons8-bootstrap-144.png">
+                <img class = "iconimage" src="./images/icons8-bootstrap-144.png">
                 <h3>BOOTSTRAP</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis earum reprehenderit natus, sequi dolorum aperiam ab voluptatibus rem atque, qui quos quam dolores eos eveniet voluptates expedita? Nulla, quis consectetur Lorem ipsum, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, necessitatibus! Amet ipsam id, repellat voluptates iste expedita. Voluptatibus magnam quibusdam ducimus soluta,</p>
               </div> 
@@ -154,10 +154,10 @@
       <div id= "contactdiv" class="contactme container-fluid jumotron text-center padding">
         <h5 class="display-5">Contact Me</h5>
         
-        <a href="mailto:naman05002@gmail.com"><img class="contacticons" src="images/gmail.png"></a>
-        <a href="https://www.linkedin.com/in/naman-aggarwal-3187b31b0"><img class="contacticons" src="images/linkedin.png"></a>
-        <a href="https://www.twitter.com/"><img class="contacticons" src="images/twitter.png"></a>
-        <a href="https://www.facebook.com/"><img class="contacticons" src="images/facebook.png"></a>
+        <a href="mailto:naman05002@gmail.com"><img class="contacticons" src="./images/gmail.png"></a>
+        <a href="https://www.linkedin.com/in/naman-aggarwal-3187b31b0"><img class="contacticons" src="./images/linkedin.png"></a>
+        <a href="https://www.twitter.com/"><img class="contacticons" src="./images/twitter.png"></a>
+        <a href="https://www.facebook.com/"><img class="contacticons" src="./images/facebook.png"></a>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
