--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="card-body">
           <h1 class="card-title">Naman Aggarwal</h1>
           <p class="card-text">Student | Web Developer</p>
-          <a href="/eduction.html" class="btn btn-primary">Qualifications</a>
+          <a href="/education.html" class="btn btn-primary">Qualifications</a>
         </div>
       </div>
       <!-- about me -->
