--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- navigator bar -->
     <nav id="navigator" class="navbar navbar-expand-sm navbar-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src=".images/n.png" height="30px" width="30px"></a>
+            <a class="navbar-brand" href="#"><img src="./images/n.png" height="30px" width="30px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,7 +46,7 @@
         <div class="card-body">
           <h1 class="card-title">Naman Aggarwal</h1>
           <p class="card-text">Student | Web Developer</p>
-          <a href="/education.html" class="btn btn-primary">Qualifications</a>
+          <a href="./education.html" class="btn btn-primary">Qualifications</a>
         </div>
       </div>
       <!-- about me -->
