--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -44,7 +46,7 @@
       <div id="profilecard" class="card col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 crotating-card-container manualtrigger manual-flip"" >
         <img id="profile-image" class="card-img-top" src="./images/profilepic.png" alt="Card image">
         <div class="card-body">
-          <h1 class="card-title">Naman Aggarwal</h1>
+          <h1 class="card-title" style="color: black;">Naman Aggarwal</h1>
           <p class="card-text">Student | Web Developer</p>
           <a href="./education.html" class="btn btn-primary">Qualifications</a>
         </div>
