--- a/education.html
+++ b/education.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Qualifications</title>
+    
     <link rel="stylesheet" href="main.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Noto+Sans+JP&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -31,7 +35,7 @@
         </div>
     </nav>
    <div class="container-fluid row padding " ">
-       <h1 class="display-1" style="margin-bottom: 40px">Education</h1>
+       <h1 class="display-1" style="margin-bottom: 40px; font-family: 'Fredoka One', cursive;">Education</h1>
        <div class="container col-md-6 col-xl-4 ">
         <image class="rounded" src="./images/campus.jpg" style= "width: 100%"></image>
 
