--- a/education.html
+++ b/education.html
@@ -34,8 +34,8 @@
             </div>
         </div>
     </nav>
-   <div class="container-fluid row padding " ">
-       <h1 class="display-1" style="margin-bottom: 40px; font-family: 'Fredoka One', cursive;">Education</h1>
+   <div class="container-fluid row padding  ">
+       <h1 class="display-1 text-center" style="margin-bottom: 40px; font-family: 'Fredoka One', cursive;">Education</h1>
        <div class="container col-md-6 col-xl-4 ">
         <image class="rounded" src="./images/campus.jpg" style= "width: 100%"></image>
 
