--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="card-body">
           <h1 class="card-title" style="color: black;">Naman Aggarwal</h1>
           <p class="card-text">Student | Web Developer</p>
-          <a href="./education.html" class="btn btn-primary">Qualifications</a>
+          <a href="./education.html" class="btn btn-primary" style="background-color: #329d9c;">Qualifications</a>
         </div>
       </div>
       <!-- about me -->
