--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="carousel-item">
           <img src="./images/flutter.png" class="d-block w-auto carouselimage" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Flutter App Development</h5>
+            <h5>Flutter</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit neque assumenda perferendis.</p>
           </div>
         </div>
